using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class OrtizAnimationController
{
    public static class Params
    {
        public const string Speed = "Speed";
        public const string Attack = "Attack";
        public const string Jump = "Jump";
        public const string Run = "Run";
        public const string BackWalk = "BackWalk";
    }
}